<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/ic_launcher_foreground"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/editTextTemperature"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/editTextTemperature"
        android:inputType="numberDecimal"
        android:textSize="22sp" />

    <RadioGroup
        android:id="@+id/radioGroupUnits"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextTemperature"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioButtonFahrenheit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radioButtonFahrenheit"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/radioButtonCelsius"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/radioButtonCelsius"
            android:textSize="20sp" />

    </RadioGroup>


    <Button
        android:id="@+id/buttonConvert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/radioGroupUnits"
        android:layout_marginTop="16dp"
        android:background="#8A8888"
        android:text="@string/buttonConvert"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textViewResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonConvert"
        android:layout_marginTop="16dp"
        android:textSize="22sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        tools:ignore="Orientation">

        <Button
            android:id="@+id/buttonCall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="29dp"
            android:layout_marginRight="36dp"
            android:onClick="callUs"
            android:text="@string/buttonCall" />

        <Button
            android:id="@+id/buttonAbout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="29dp"
            android:layout_marginRight="36dp"
            android:onClick="About"
            android:text="@string/buttonAbout" />


        <Button
            android:id="@+id/buttonExit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="29dp"
            android:layout_marginRight="38dp"
            android:text="@string/buttonExit" />

    </LinearLayout>


</RelativeLayout>